# rust-todo

./: .env  Cargo.toml  README.md  docker-compose.yml
assets/: index.html
migrations/: 20231116172232_2023-11-16.sql
src/: main.rs  templates.rs
templates/: todo_row.html
