[package]
name = "rust-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
eyre = "0.6.8"
poem = "1.3.58"
poem-openapi = { version = "3.0.5", features = ["openapi-explorer"] }
serde = {version = "1.0.192", features = ["derive"]}
serde_json = "1.0.108"
tokio = { version = "1", features = ["full"] }
