[package]
name = "rust-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
color-eyre = "0.6.2"
eyre = "0.6.8"
poem = { version = "1.3.58", features = ["eyre06"] }
poem-openapi = { version = "3.0.5", features = ["openapi-explorer", "chrono"] }
serde = {version = "1.0.192", features = ["derive"]}
serde_json = "1.0.108"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "mysql", "chrono"] }
tokio = { version = "1", features = ["full"] }
